# openxcom-tui

./: .gitignore  DECISIONS.md  DOGFOOD.md  Makefile  README.md  openxcom.py  pyproject.toml
openxcom_tui/: __init__.py  agent_api.py  app.py  battlescape.py  content.py  engine.py  geoscape.py  screens.py  sounds.py  tiles.py  tui.tcss
screenshots/: README.md  gameplay.tcell  hero.tcell
screenshots/candidates/: README.md
tests/: api_qa.py  perf.py  playtest.py  qa.py
